@@ -957,7 +957,7 @@ void
 rxvt_term::set_title (const char *str)
 {
   set_string_property (XA_WM_NAME, str);
-#if ENABLE_FRILLS
+#if ENABLE_EWMH
   set_utf8_property (xa[XA_NET_WM_NAME], str);
 #endif
 }
@@ -966,7 +966,7 @@ void
 rxvt_term::set_icon_name (const char *str)
 {
   set_string_property (XA_WM_ICON_NAME, str);
-#if ENABLE_FRILLS
+#if ENABLE_EWMH
   set_utf8_property (xa[XA_NET_WM_ICON_NAME], str);
 #endif
 }
